# a2a-cli

./: .gitignore  .gitmodules  .npmrc  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  INSTALL.md  LICENSE  Makefile  README.md  bunfig.toml  cliff.toml  config.example.yaml  config.toml  go.mod  go.sum  main.py  pyproject.toml  rustfmt.toml  skills-lock.json  tasks.py
.agents/skills/coding-guidelines/: SKILL.md
.agents/skills/domain-cli/: SKILL.md
.agents/skills/domain-cloud-native/: SKILL.md
.agents/skills/domain-ml/: SKILL.md
.agents/skills/m01-ownership/: SKILL.md
.agents/skills/m02-resource/: SKILL.md
.agents/skills/m03-mutability/: SKILL.md
.agents/skills/m04-zero-cost/: SKILL.md
.agents/skills/m05-type-driven/: SKILL.md
.agents/skills/m06-error-handling/: SKILL.md
.agents/skills/m07-concurrency/: SKILL.md
.agents/skills/m09-domain/: SKILL.md
.agents/skills/m10-performance/: SKILL.md
.agents/skills/m12-lifecycle/: SKILL.md
.agents/skills/m13-domain-error/: SKILL.md
.agents/skills/m14-mental-model/: SKILL.md
.agents/skills/m15-anti-pattern/: SKILL.md
.agents/skills/meta-cognition-parallel/: SKILL.md
.agents/skills/rust-call-graph/: SKILL.md
.agents/skills/rust-trait-explorer/: SKILL.md
.agents/skills/unsafe-checker/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  release-header.md
.github/workflows/: build.yml  bump.yml  ci.yml  generate-skills.yml  publish-crates.yml  publish-npm.yml  publish-skills.yml  release.yml
a2a-cli/: Cargo.toml  README.md  build.rs
a2a-cli/proto/google/api/: annotations.proto  client.proto  field_behavior.proto
a2a-cli/src/: api.rs  auth.rs  auth_commands.rs  cli.rs  client.rs  config.rs  error.rs  examples.rs  lib.rs  main.rs  printer.rs  runner.rs  token_store.rs  validate.rs
a2a-cli/src/commands/: agent.rs  auth.rs  config.rs  generate_skills.rs  schema.rs  task.rs
a2a-cli/tests/: doc_snippets.rs  integration.rs
a2a-cli/tests/common/: mock_server.rs  mod.rs
a2a-compat/: Cargo.toml
a2a-compat/src/: lib.rs
agc/: Cargo.toml  build.rs
agc/src/: auth.rs  auth_commands.rs  cli.rs  client.rs  config.rs  error.rs  examples.rs  lib.rs  main.rs  printer.rs  runner.rs  token_store.rs  validate.rs
agc/src/commands/: agent.rs  auth.rs  config.rs  generate_skills.rs  mod.rs  schema.rs  task.rs
agc/tests/: doc_snippets.rs  integration.rs
agc/tests/common/: mock_server.rs  mod.rs
art/: features.txt  outro.txt  scene1.txt  scene2.txt  scene2b.txt  scene3.txt  scene3b.txt  scene4.txt  scene5.txt  scene6.txt  scene7.txt  scene8.txt  scene9.txt
cmd/agc/: main.go
docs/: demo.tape
internal/auth/: discovery.go  manager.go  oauth.go  token.go
internal/cli/: agent_cmd.go  auth_cmd.go  card.go  config_cmd.go  generate_skills.go  root.go  schema_cmd.go  send.go  task.go
internal/config/: config.go
internal/output/: fields.go  fields_test.go  output.go  response.go  sanitize.go
internal/validate/: validate.go  validate_test.go
npm/: bin.js  install.js  package.json  platform.js  run.js
scripts/: show-art.sh  sync-npm-version  update-skills
skills/: INDEX.md
skills/a2a/: SKILL.md
skills/agc/: SKILL.md
skills/agc-agent-rover-dev/: SKILL.md
skills/agc-shared/: SKILL.md
skills/eai/: SKILL.md
skills/rover/: SKILL.md
