[package]
name = "a2a-protocol-cli"
version = "0.0.0"
description = "A2A protocol CLI and Rust client API"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sandangel/a2a-cli"
readme = "README.md"
keywords = ["a2a", "agent2agent", "agent", "cli", "oauth2"]
categories = ["command-line-utilities", "api-bindings"]
include = ["Cargo.toml", "Cargo.lock", "README.md", "build.rs", "proto/**", "src/**", "tests/**"]

# Enforce warnings-as-errors for this package only.
# Using [lints] instead of `-- -D warnings` on the CLI because cargo passes
# CLI lint flags to all workspace members (including read-only a2a-rs path deps).
[lints.rust]
warnings = "deny"
[lints.clippy]
all = "deny"

[[bin]]
name = "a2a"
path = "src/main.rs"

[lib]
name = "a2a_cli"
path = "src/lib.rs"

[dependencies]
# A2A protocol (submodule path deps — a2a-rs workspace resolves their internal deps)
a2a        = { package = "a2a-lf",        version = "0.2.4",  path = "../a2a-rs/a2a" }
a2a-client = { package = "a2a-client-lf", version = "0.1.13", path = "../a2a-rs/a2a-client" }
a2acli     = { package = "a2a-cli",       version = "0.1.0",  path = "../a2a-rs/a2acli" }

# A2A v0.3 backward-compatibility layer
a2a-compat = { package = "a2a-protocol-compat", version = "0.0.0", path = "../a2a-compat" }

# CLI
clap          = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4"
indicatif     = "0.18"

# Async
tokio      = { version = "1",   features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures    = "0.3"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP (rustls to avoid openssl system dep)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }

# Error handling
thiserror = "2"
anyhow    = "1"

# OAuth2 (generic — not Google-specific)
oauth2 = { version = "5", features = ["reqwest"] }

# Token encryption
aes-gcm          = "0.10"
rand             = "0.8"
base64           = { version = "0.22", features = ["std"] }
zeroize          = { version = "1", features = ["derive"] }
sha2             = "0.11"
percent-encoding = "2.3"

# jq filter support (--jq flag)
jaq-core = "3"
jaq-std  = { version = "3", features = ["std", "format", "math", "log", "time", "regex"] }
jaq-json = { version = "2", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# File system
tempfile = "3"
dirs     = "6"

# Browser open
open = "5"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
protoc-bin-vendored = "3"
prost-reflect       = "0.16"
prost-types         = "0.13"
serde_json          = "1"

[dev-dependencies]
serial_test  = "3"
axum         = { workspace = true }
a2a-server   = { package = "a2a-server-lf", path = "../a2a-rs/a2a-server" }
async-trait  = "0.1"

# ── Platform-specific OpenSSL (for cross-compilation) ────────────────
# a2a-client-lf (a2a-rs, read-only) declares reqwest without
# default-features = false, so reqwest's native-tls (openssl) is pulled in
# via feature unification. Vendoring ensures cross-compiled Linux targets
# can build without system OpenSSL headers.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# ── Platform-specific keyring backends ───────────────────────────────
# Without explicit features, keyring v3 uses an in-process mock (no persistence).
# Go's go-keyring has D-Bus built in; we must opt in explicitly here.

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
keyring = "3"
